--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/goosetea/understand-webpack/issues"
   },
-  "homepage": "https://github.com/goosetea/understand-webpack#readme"
+  "homepage": "https://github.com/goosetea/understand-webpack#readme",
+  "devDependencies": {
+    "html-webpack-plugin": "^2.22.0",
+    "webpack": "^1.13.2"
+  }
 }
