--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "homepage": "https://github.com/goosetea/understand-webpack#readme",
   "devDependencies": {
+    "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   }
 }
