--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/goosetea/understand-webpack#readme",
   "devDependencies": {
+    "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
