--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Understand webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"webpack -p",
+    "serve":"webpack-dev-server --inline"
   },
   "repository": {
     "type": "git",
@@ -23,9 +25,11 @@
   "devDependencies": {
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.2"
   }
 }
